# polymorphine

./: CMakeLists.txt  README.md  main.cpp
cmake/: Gcovr.cmake  (+3 more)
lib/: ArgumentValue.cpp  ArgumentValue.h  BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  FunctionData.cpp  FunctionData.h  FunctionPrototype.cpp  FunctionPrototype.h  Instruction.cpp  Instruction.h  InstructionList.h  InstructionVisitor.h  ir.h  ir_frwd.h
lib/asm/: AbstractAssembler.h  Address.cpp  Address.h  AsmBuffer.h  AsmEmitter.h  Assembler.cpp  Assembler.h  CPUInstruction.h  Common.h  Encoding.h  Immediate.h  Instruction.h  Label.cpp  Label.h  Register.cpp  Register.h  Relocation.h  SizeEvaluator.h  Visitor.h  asm.h  asm_frwd.h  encoding.cpp  encoding.h
lib/asm/address/: Address.h  AddressBaseDisp.h  AddressIndexScale.h  AddressLiteral.h
lib/asm/elf/: Elf.cpp  Elf.h  elf_types.hpp  elfio.hpp  elfio_dynamic.hpp  elfio_header.hpp  elfio_relocation.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_symbols.hpp  elfio_utils.hpp
lib/asm/global/: AssembleSlot.h  Directive.cpp  Directive.h  Slot.cpp  Slot.h  SlotType.h
lib/asm/instruction/: Add.h  CPUInstruction.h  Call.h  Cmp.h  CondType.h  Jcc.h  Jmp.h  Label.h  Leave.h  Mov.h  Pop.h  Push.h  Ret.h  SetCC.h  Sub.h  Xor.h
lib/asm/reg/: RegMap.h  RegSet.h  Register.cpp  Register.h
lib/asm/symbol/: Symbol.cpp  Symbol.h  SymbolTable.h
lib/asm/x64/: AsmBuffer.cpp  AsmBuffer.h  AsmEmitter.h  AsmModule.cpp  AsmModule.h  AssembleGlobals.h  Assembler.h  Common.h  CondType.cpp  CondType.h  Encoding.h  Relocation.h  SizeEvaluator.h  asm.h
lib/base/: Attribute.cpp  Attribute.h  BasicBlockBase.h  CommonInstruction.h  Constant.h  Constrains.h  FunctionBind.cpp  FunctionBind.h  FunctionDataBase.h  FunctionLinkage.cpp  FunctionLinkage.h  FunctionVisibility.cpp  FunctionVisibility.h  InstLocation.h  Prefix.h
lib/base/analysis/: AnalysisPass.h  AnalysisPassCacheBase.h  AnalysisPassManagerBase.h
lib/base/global/: CommonSlot.h  Constant.h  SlotType.h  ZeroInit.h
lib/builder/: FunctionBuilder.cpp  FunctionBuilder.h  FunctionBuilder.hpp  ModuleBuilder.cpp  ModuleBuilder.h
lib/elf/: Elf.cpp  Elf.h
lib/instruction/: Alloc.h  Binary.h  Compare.cpp  Compare.h  GetElementPtr.h  Instruction.cpp  Instruction.h  InstructionVisitor.h  Store.h  Store.hpp  TerminateInstruction.cpp  TerminateInstruction.h  TerminateValueInstruction.cpp  TerminateValueInstruction.h  Terminator.cpp  Terminator.h  Unary.h  ValueInstruction.cpp  ValueInstruction.h
lib/lir/x64/: lir.h  lir_frwd.h
lib/mir/: mir.h  mir_frwd.h
lib/mir/analysis/: Analysis.h
lib/mir/builder/: FunctionBuilder.cpp  FunctionBuilder.h  ModuleBuilder.cpp  ModuleBuilder.h
lib/mir/global/: ConstantPool.cpp  ConstantPool.h  GValuePool.h  GlobalConstant.cpp  GlobalConstant.h  GlobalSymbol.cpp  GlobalSymbol.h  GlobalValue.cpp  GlobalValue.h  GlobalVariable.cpp  GlobalVariable.h  Initializer.cpp  Initializer.h
lib/mir/instruction/: Alloc.h  Binary.h  Callable.h  Compare.h  Fcmp.h  FieldAccess.h  GetElementPtr.h  GetFieldPtr.h  Icmp.h  Instruction.cpp  Instruction.h  InstructionMatcher.h  InstructionVisitor.h  IntDiv.h  Phi.h  Projection.h  Select.cpp  Select.h  Store.h  TerminateInstruction.cpp  TerminateInstruction.h  TerminateValueInstruction.cpp  TerminateValueInstruction.h  Terminator.cpp  Terminator.h  Unary.h  ValueInstruction.cpp  ValueInstruction.h
lib/mir/module/: BasicBlock.cpp  BasicBlock.h  FunctionData.cpp  FunctionData.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionPrototype.cpp  FunctionPrototype.h  FunctionPrototypeTable.h  Module.cpp  Module.h
lib/mir/types/: AggregateType.h  ArithmeticType.h  ArrayType.h  FlagType.h  FloatingPointType.h  IntegerType.h  NonTrivialType.h  PointerType.h  PrimitiveType.cpp  PrimitiveType.h  StructType.cpp  StructType.h  TupleType.h  Type.cpp  Type.h  TypeMatcher.h  TypeMatchingRules.h  TypeVisitor.h  VoidType.h
lib/mir/value/: ArgumentValue.cpp  ArgumentValue.h  LocalValue.cpp  LocalValue.h  LocalValueMap.h  Use.h  UsedValue.cpp  UsedValue.h  UsedValueMap.h  Value.cpp  Value.h  ValueMatcher.h
lib/module/: BasicBlock.cpp  BasicBlock.h  FunctionData.cpp  FunctionData.h  FunctionPrototype.cpp  FunctionPrototype.h  FunctionSet.h  Module.cpp  Module.h
lib/pass/: Constrains.h
lib/pass/analysis/: Analysis.h  AnalysisPass.cpp  AnalysisPass.h  AnalysisPassCache.cpp  AnalysisPassCache.h  AnalysisPassCacheBase.cpp  AnalysisPassCacheBase.h
lib/platform/lower/: Lowering.cpp  Lowering.h  VregBuilder.hpp
lib/types/: Type.cpp  Type.h  TypeMatcher.h  TypeMatchingRules.h  TypeVisitor.h
lib/utility/: ArithmeticUtils.h  BitUtils.h  Error.cpp  Error.h  InplaceVec.h  OrderedSet.h  RemoveFast.h  Sanitizer.h
lib/utlility/: OrderedSet.h
lib/value/: ArgumentValue.cpp  ArgumentValue.h  LocalValue.cpp  LocalValue.h  LocalValueMap.h  Value.cpp  Value.h  ValueMatcher.h
tests/: Buff.h  CMakeLists.txt  Utils.h  array_access.cpp  array_access_test.cpp  asm_test.cpp  asm_test_1.cpp  asm_test_2.cpp  asm_test_setcc.cpp  bubble_sort.cpp  call_conv.cpp  call_conv_test.cpp  call_test.cpp  call_test1.cpp  constexpr_asm_test.cpp  convertion_test.cpp  empty_function.cpp  empty_function_test.cpp  fib_test.cpp  global_constant_test.cpp  global_variable_test.cpp  instruction_tests.cpp  int_div_test.cpp  memcpy_test.cpp  ordered_set_tests.cpp  reg_map.cpp  reg_set.cpp  sanity_check_ir.cpp  sanity_check_ir1.cpp  sanity_check_ir2.cpp  sse_asm_test.cpp  struct_access_test.cpp  struct_test.cpp
tests/algo/: test_bubble_sort.cpp  test_clamp.cpp  test_fib.cpp  test_swap.cpp
tests/asm/: asm_test.cpp  asm_test_1.cpp  asm_test_2.cpp  asm_test_setcc.cpp  convertion_test.cpp  reg_map_test.cpp  reg_set_test.cpp  sse_asm_test.cpp
tests/helpers/: Jit.cpp  Jit.h  Utils.cpp  Utils.h
tests/ir/: convertion_test.cpp  div_test.cpp  empty_function_test.cpp  int_div_test.cpp  ordered_set_tests.cpp  sanity_check_ir.cpp  sanity_check_ir1.cpp  sanity_check_ir2.cpp  test_cmp.cpp
tests/ir/array/: array_access_test.cpp
tests/ir/call/: call_conv_test.cpp  call_test.cpp  call_test1.cpp
(+400 files in other folders)
